--- a/syllabus_styles.css
+++ b/syllabus_styles.css
@@ -110,7 +110,7 @@ footer {
   header {
     position: fixed;
     top: 0;
-    margin: 5px 5px 50px 5px;
+    margin: 0 5px 50px 5px;
     background: rgba(255, 255, 255, .85);
   }
   
